fix layout issue: gantSVG is now n same height

--- a/src/views/roadmap-view/jq-gantt/gantt.css
+++ b/src/views/roadmap-view/jq-gantt/gantt.css
@@ -453,6 +453,7 @@ select.taskStatus{
   background-color: transparent;
   width: 100%;
   overflow-y: hidden; /*IE11 bug*/
+  margin-top: 2px;
 }
 
 .taskBoxSVG{
